fixed the background image but still having trouble aligning the items

--- a/Public/css/potions/createpotion.css
+++ b/Public/css/potions/createpotion.css
@@ -19,7 +19,11 @@ body {
 .ingredients {
     display: flex;
     text-align: center;
-    justify-content: center;
+    flex-direction: column;
+  
+
+   
+    
     filter: drop-shadow(-8px 12px 9px rgba(219, 100, 100, 0.67));
     transition: 200ms;
 }
@@ -35,7 +39,7 @@ body {
     height: 10%;
     filter: drop-shadow(-8px 12px 9px rgba(219, 100, 100, 0.67));
     transition: 200ms;
-   
+  
 }
 
 .mage {
@@ -73,7 +77,7 @@ body {
     line-height: 45px;
     filter: drop-shadow(-8px 12px 9px rgba(219, 100, 100, 0.67));
     width: 1050px;
-    height: 200px;
+    height: 250px;
     border-radius: 60px;
     padding: 15px;
     border: #edd8d8 solid 11px;
